# dynamic-dpo-v1

./: .gitignore  AGENTS.md  README.md  accelerate_fsdp.yaml  config_beta_dpo.yaml  config_dpo.yaml  config_dpo_beta.yaml  config_dpo_original.yaml  config_rollout.yaml  config_sft.yaml  data_process_sft.py  dataset_process_hh.py  debug.py  dpo_batch_debug (3).jsonl  dpo_loss.py  pyproject.toml  requirements.txt  risk_dpo_trainer.py  run_and_shutdown.sh  train_sft.py  training.py  truncation_analysis.json  util.py
beta_dpo_V2/: config_dpo.yaml  dpo_loss.py  risk_dpo_trainer.py  training.py
docs/: alpacaeval_implementation_plan.md  beta_dpo_v2_integration_plan.md  codebase_reorganization_plan.md  fix-zero-margin.md  gpt4_oracle_evaluation_plan.md  gpt_judge_implementation_plan.md  implementation_plan.md  rollout_implementation_plan.md  sft_implementation_plan.md  sft_model_test_plan.md  task.md
multi_dataset_tesitng/: fail_rate_from_running_logs.ipynb
notebooks/: debug_dpo.ipynb  inspect_label_building_masking.ipynb
src/: __init__.py  cli.py
src/config/: __init__.py  loader.py
src/data/: __init__.py  hh_dataset.py  sft_dataset.py  templates.py
src/data_generation/: hh_parser.py  rollout.py  run_rollout.py  upload_judged_rollout.py  utils.py
src/losses/: __init__.py  beta_dpo.py  beta_update.py  dpo_loss.py  margin.py
src/quantile/: __init__.py  accumulator.py
src/trainers/: __init__.py  beta_dpo.py  dpo_trainer.py  dynamic_beta_dpo.py  dynamic_beta_dpo_fsdp.py  sft_trainer.py
src/utils/: __init__.py  debug.py  logging.py
test/: __init__.py
(+71 files in other folders)
