[project]
name = "dynamic-dpo-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.0",
    "datasets>=4.4.2",
    "hf-transfer>=0.1.9",
    "matplotlib>=3.10.8",
    "numpy>=1.26.0,<2.3",
    "peft>=0.18.0",
    "pyyaml>=6.0.3",
    "scipy>=1.16.3",
    "tokenizers>=0.22.2",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "trl>=0.26.2",
    "wandb>=0.23.1",
    "vllm==0.11.2",
]
